<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/ScrollView_GuideActivity" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_height="fill_parent" 
    	android:layout_width="fill_parent" 
    	android:orientation="vertical" 
    	android:weightSum="1.0">
		<TextView  
		    android:layout_width="fill_parent"
		    android:textSize="12.0px"
			android:paddingLeft="2.0px"
			android:paddingRight="3.0px"
		    android:layout_height="wrap_content" 
		    android:textColor="@color/custom_text_white_color"
		    android:text="@string/select_category"/>
    	<Spinner 
	    	android:id="@+id/category_spinner"
			android:layout_width="wrap_content"			
		    android:textColor="#000000"
			android:layout_height="wrap_content" />
		<TextView  
		    android:layout_width="fill_parent"
		    android:textSize="12.0px"
			android:paddingLeft="2.0px"
			android:paddingRight="3.0px"
		    android:layout_height="wrap_content" 
		    android:textColor="@color/custom_text_white_color"
		    android:text="@string/select_subcategory"/>
    	<Spinner 
	    	android:id="@+id/subcategory_spinner"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<TextView  
		    android:layout_width="fill_parent"
		    android:textSize="12.0px"
			android:paddingLeft="2.0px"
			android:paddingRight="3.0px"
		    android:layout_height="wrap_content" 
		    android:textColor="@color/custom_text_white_color"
		    android:text="@string/select_action" />
    	<Spinner 
	    	android:id="@+id/action_spinner"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
    	<EditText  
	    	android:id="@+id/search_text_area"
		    android:layout_width="fill_parent"
		    android:textSize="12.0px"
			android:paddingLeft="2.0px"
			android:paddingRight="3.0px"
		    android:layout_height="wrap_content" 
		    android:text="@string/find_for" 
		    android:selectAllOnFocus="true" 
		    android:visibility="invisible"
		    android:singleLine="true" />

		<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    	android:layout_height="wrap_content" 
	    	android:layout_width="fill_parent" 
	    	android:stretchColumns="*"
	    	android:layout_weight="0.2">
    		<TableRow 
	    		android:layout_height="wrap_content" 
	    		android:baselineAligned="false">
    			<Button 
		    		android:drawableTop="@drawable/exit" 
		    		android:layout_width="wrap_content" 
		    		android:layout_height="wrap_content" 
		    		android:id="@+id/GuideActivity_exitButton"/>
    			<Button  
					android:drawableTop="@drawable/next" 
		    		android:layout_width="wrap_content" 
		    		android:layout_height="wrap_content" 
		    		android:id="@+id/GuideActivity_nextButton"/>
    		</TableRow>
		</TableLayout>
	</LinearLayout>
</ScrollView>