<?xml version="1.0" encoding="utf-8"?>
<!-- <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/ScrollView02" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"> -->
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_height="fill_parent" 
	    android:layout_width="fill_parent" 
	    android:orientation="vertical" 
	    android:weightSum="1.0">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_height="fill_parent" 
		    android:layout_width="fill_parent" 
		    android:orientation="vertical"
		    android:layout_weight="0.8">
			<ImageView   
				android:id="@+id/logo"
				android:layout_gravity="center"
				android:paddingTop="3.0px"
				android:paddingBottom="3.0px"
			  	android:layout_width="wrap_content"
			  	android:layout_height="wrap_content"
			  	android:src="@drawable/patra_city_guide"/>
			<TextView  
			    android:layout_width="fill_parent"
			    android:textSize="12.0px"
				android:paddingLeft="2.0px"
				android:paddingRight="3.0px"
			    android:layout_height="wrap_content" 
			    android:textColor="@color/custom_text_white_color"
			    android:text="@string/intro"/>
			<TextView  
				android:gravity="right"
			    android:textSize="12.0px"
				android:paddingRight="3.0px"
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
				android:paddingTop="5.0px"
			    android:textColor="@color/custom_text_white_color"
			    android:text="@string/thanks"/>
			<TextView  
				android:gravity="right"
			    android:textSize="12.0px"
				android:paddingRight="3.0px"
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:textStyle="bold|italic"
			    android:textColor="@color/custom_text_white_color"
			    android:text="@string/PCG_Team"/>
			<ImageView   
				android:id="@+id/animation"
				android:layout_gravity="center"
				android:paddingTop="5.0px"
				android:paddingBottom="5.0px"
			  	android:layout_width="wrap_content"
			  	android:layout_height="wrap_content"
				android:adjustViewBounds="true"/>  
		</LinearLayout>
		<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_height="wrap_content" 
		    android:layout_width="fill_parent" 
		    android:stretchColumns="*"
		    android:layout_weight="0.2">
    		<TableRow 
    			android:layout_height="wrap_content" 
    			android:baselineAligned="false">
    			<Button 
			    	android:drawableTop="@drawable/exit" 
			    	android:layout_width="wrap_content" 
			    	android:layout_height="wrap_content" 
			    	android:id="@+id/PatraCityGuideActivity_exitButton"/>
    			<Button  
					android:drawableTop="@drawable/next" 
			    	android:layout_width="wrap_content" 
			    	android:layout_height="wrap_content" 
			    	android:id="@+id/PatraCityGuideActivity_nextButton"/>
    		</TableRow>
		</TableLayout>
	</LinearLayout>
<!-- </ScrollView> -->